# LibraKAN

./: README.md  pyproject.toml  requirements.txt
experiments/4.1_main_results/: aggregate_table1.py  deit_tiny_cifar100.py  mixers.py  mlpmixerS_imagenet.py  resnet18_cifar10.py  run.sh  vit_tiny16_imagenet.py
experiments/4.2_kanbefair/: datasets.py  mixers.py  results.csv  run.sh  train.py
experiments/4.3_libra_downstream/: datasets.py  fasterrcnn_coco.py  maskrcnn_coco.py  mixers.py  run.sh  upernet_ade20k.py
experiments/4.4_implicit_nf/: datasets.py  metrics.py  mixers.py  run.sh  train.py
experiments/4.5_libra_ablation/: aggregate_table6.py  datasets.py  mixers.py  plot_ablation.py  run.sh  train.py
experiments/4.6_Function Approximation/: README.md  function_approx_results.py  train_utils.py
implicit_nf/: README.md  metrics.py  train_nf.py  utils.py
implicit_nf/models/: kaf_wrap.py  librakan_mixer.py  librakan_wrap.py  mlp.py
kanbefair/: run.sh  run_cifar10_resnet18.sh  run_sin.sh  sin_freq.py  test.py  train_cifar10_resnet18.py  train_librakan.py
kanbefair/models/: FAN.py  GPKAN.py  KAF.py  KAN.py  LibraKAN.py  MLP.py
libra_ablation/: README.md  ablation.py  mixers.py  models.py  requirements.txt  run.sh
libra_downstream/: README.md  requirements.txt  run.sh  train_ade20k.py  train_coco.py
libra_downstream/mixers/: kaf.py  librakan.py  mlp.py
libra_downstream/models/: detection_mixer.py  segmentation_mixer.py
libra_downstream/utils/: complexity.py  metrics.py
librakan_act/: __init__.py  librakan.py  nufft_es.py  shrinkage.py
(+3 files in other folders)
