[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "librakan_act"
version = "0.2.0"
description = "LibraKAN: Local Linear–GELU + NUFFT–ES (1D/2D) spectral branch with learnable or fixed S_{λ,p} shrinkage and spectrum logging"
authors = [{name="LibraKAN Authors"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.24",
    "tqdm>=4.66",
    "matplotlib>=3.7",
    "scikit-image>=0.22",
    "pandas>=2.2",
    "scipy>=1.11"
]

[tool.setuptools.packages.find]
include = ["librakan_act*"]
